K1J-1594: Create unauthorized private practitioner if subscription exists but user isn't registered in private-practitioner-service